Banana title and photos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="main.js" charset="utf-8"></script>
   </head>
   <body>
+    <h1>Bananas!</h1>
 
+    <p>
+      <img src="http://i.imgur.com/7ulTkbN.jpg" alt="">
+    </p>
   </body>
 </html>
