--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p>
       <img src="http://i.imgur.com/7ulTkbN.jpg" alt="">
     </p>
+
+    <p>Original Content &copy; 2016 Jason L Perry. Those Rights Reserved.</p>
+    <p>Minions &copy; 2016 Dreamworks Pictures.</p>
   </body>
 </html>
