--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Bananas</title>
-    <script src="main.js" charset="utf-8"></script>
+    <style>
+      body {
+        font-family: "Helvetica Neue", sans-serif;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <h1>Bananas!</h1>
 
     <p>
-      <img src="http://i.imgur.com/7ulTkbN.jpg" alt="">
+      <img src="http://i.imgur.com/RwxD3JO.jpg" alt="">
     </p>
 
     <p>Original Content &copy; 2016 Jason L Perry. Those Rights Reserved.</p>
     <p>Minions &copy; 2016 Dreamworks Pictures.</p>
+    <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
